[package]
name = "rust-pay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = { version = "0.18.1", features = ["derive"]}
axum = "0.6.18"
serde = { version = "1.0.180", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
rust_decimal = "1.36.0"
uuid = { version = "1.3", features = ["v4"] }
dashmap = "6.0.1"

